# sidbox-softwares

./: README.md
HIDFiffy/: CMakeLists.txt
SidboxTerminal/: CMakeLists.txt  blue-button.xml  directoryboss.cpp  directoryboss.h  directoryboss.ui  frmftp.cpp  frmftp.h  frmftp.ui  green-button.xml  kfmparser.cpp  kfmparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quit-button.xml  serialhandler.cpp  serialhandler.h
SidboxTerminal/_work/: install-things.txt
asound-test/: CMakeLists.txt  main.cpp
graphics-editor/: CMakeLists.txt  box-palletesettings.xml  coder-girl.icn  electronscape-test1.icn  escape-logo.pal  escape-test2.icn  font.cpp  fonteditor.cpp  fonteditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  silly-pic.icn  test-big.icn  test.icn  test.pal  test.pfn  test2.icn  text-flames.icn  wobbly-test.icn
graphics-editor/work-test/: APICO1.iff  APICO2.iff  SCREEN.iff  SKULL.icn  ScreenShot00002.iff  cowboys_amiga.iff  cowboys_amiga_a.iff  slash1.iff  streamy.iff
graphics-editor/work-test/thetwo_iffs/: ScreenShot00040.iff  ScreenShot00043.iff  ScreenShot00048.iff  ScreenShot00061.iff  ScreenShot00082.iff  ScreenShot00094.iff  ScreenShot00134.iff  ScreenShot00137.iff  ScreenShot00156.iff  ScreenShot00172.iff  ScreenShot00211.iff  ScreenShot00212.iff  ScreenShot00223.iff  ScreenShot00224.iff  ScreenShot00236.iff  ScreenShot00273.iff  ScreenShot00274.iff  ScreenShot00275.iff  ScreenShot00311.iff  kimmy02src.iff
graphics-test/: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  font.cpp  font.h  graphics.cpp  main.cpp  sbapi_graphics.h
graphics-test/hardware/: audiosys.cpp  audiosys.h  stm32ram.cpp  stm32ram.h
graphics-test/smsemu/: bus.cpp  cpu.cpp  internal.h  joypad.cpp  sms.cpp  sms.h  sms_main.cpp  sn76489.cpp  types.h  vdp.cpp
hidjibjab/: CMakeLists.txt  keyboardhidemu.cpp  keyboardhidemu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
packet2/: icon.rc  main.c  packet2.cbp  packet2.depend  packet2.layout  packet2.rar
